k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: partiumenu
  labels:
    app.kubernetes.io/name: partiumenu
